# propmted

./: README.md  pyproject.toml
prompted/: __init__.py  prompted.py
prompted/models/: base.py  openai.py
prompted/result_parsers/: __init__.py  base_parser.py  code_parser.py  csv_parser.py  flat_list_parser.py  json_parser.py  nested_list_parser.py  raw_text_parser.py  table_parser.py
prompted/result_parsers/results/: __init__.py  list.py  table.py
tests/: test_prompted.py
tests/result_parsers/: test_code_parser.py  test_csv_parser.py  test_flat_list_parser.py  test_json_parser.py  test_nest_list_parser.py  test_raw_text_parser.py
tests/templates/: test_prompt.tmpl
